lib/lme.h

// Console linefeed & carriage return
#define LF   L'\n'
#define CR   L'\r'
#define CRLF L"\n\r"
// Virtual Keys
#define VKEY_ESCAPE  27
#define VKEY_SPACE  32
// Primary console colors
#define FG_BLUE         1
#define FG_GREEN        2
#define FG_RED          4
#define FG_INTENSITY    8
#define BG_BLUE         16
#define BG_GREEN        32
#define BG_RED          64
#define BG_INTENSITY    128
// Custom console color
#define FG_BRIGHTYELLOW (FG_RED | FG_GREEN | FG_INTENSITY)
#define FG_YELLOW       (FG_RED | FG_GREEN)
#define FG_WHITE        (FG_RED | FG_GREEN | FG_BLUE)
#define FG_BRIGHTWHITE  (FG_WHITE | FG_INTENSITY)
#define FG_DARKGREEN    FG_GREEN
#define FG_LIGHTGREEN   (FG_GREEN | FG_INTENSITY)
#define FG_DARKGRAY     FG_INTENSITY
#define FG_CYAN         (FG_GREEN | FG_BLUE)
#define FG_MAGENTA      (FG_RED | FG_BLUE)
#define BG_BRIGHTYELLOW (BG_RED | BG_GREEN | BG_INTENSITY)
#define BG_YELLOW       (BG_RED | BG_GREEN)
#define BG_WHITE        (BG_RED | BG_GREEN | BG_BLUE)
#define BG_BRIGHTWHITE  (BG_WHITE | BG_INTENSITY)
#define BG_DARKGREEN    BG_GREEN
#define BG_LIGHTGREEN   (BG_GREEN | BG_INTENSITY)
#define BG_DARKGRAY     BG_INTENSITY
#define BG_CYAN         (BG_GREEN | FG_BLUE)
#define BG_MAGENTA      (BG_RED | FG_BLUE)
// Message roles
#define ROLE_SYSTEM    L"system"
#define ROLE_USER      L"user"
#define ROLE_ASSISTANT L"assistant"
#define ROLE_TOOL      L"tool"
// Speech Voice Attributes
#define SPEECH_VOICEATTR_DESCRIPTION 0
#define SPEECH_VOICEATTR_NAME        1
#define SPEECH_VOICEATTR_VENDOR      2
#define SPEECH_VOICEATTR_AGE         3
#define SPEECH_VOICEATTR_GENDER      4
#define SPEECH_VOICEATTR_LANGUAGE    5
#define SPEECH_VOICEATTR_ID          6
// Token Response
#define TOKENRESPONSE_WAIT    0
#define TOKENRESPONSE_APPEND  1
#define TOKENRESPONSE_NEWLINE 2
// Version
#define VERSION_FULL  0
#define VERSION_MAJOR 1
#define VERSION_MINOR 2
#define VERSION_PATCH 3
// Callbacks
typedef void (*SpeechWordCallback)(const wchar_t* AWord,
  const wchar_t* AText, const void* AUserData);
typedef bool (*InferenceCancelCallback)(const void* AUserData);
typedef void (*InferenceTokenCallback)(const wchar_t* AToken,
  const void* AUserData);
typedef void (*InfoCallback)(int ALevel, const wchar_t* AText,
  const void* AUserData);
typedef bool (*LoadModelProgressCallback)(const wchar_t* AModelName,
  float AProgress, const void* AUserData);
typedef void (*LoadModelCallback)(const wchar_t* AModelName, bool ASuccess,
  const void* AUserData);
typedef void (*InferenceStartCallback)(const void* AUserData);
typedef void (*InferenceEndCallback)(const void* AUserData);
/// <summary>
///   Prints text to the console.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
void Print(const wchar_t* AText, int AColor, ...);
/// <summary>
///   Prints text to the console with a line feed and carriage return.
/// </summary>
/// <param name="AText">
///   The text to be printed.
/// </param>
/// <param name="AColor">
///   The color of the text.
/// </param>
void PrintLn(const wchar_t* AText, int AColor, ...);
/// <summary>
///   Gets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
void GetCursorPostion(int* X, int* Y);
/// <summary>
///   Sets the console cursor X and Y position.
/// </summary>
/// <param name="X">
///   The X position of the cursor.
/// </param>
/// <param name="Y">
///   The Y position of the cursor.
/// </param>
void SetCursorPostion(int X, int Y);
/// <summary>
///   Clears the current console screen.
/// </summary>
void ClearConsole();
/// <summary>
///   Clears the current console line.
/// </summary>
/// <param name="AColor">
///   The color to use when clearing the line.
/// </param>
void ClearConsoleLine(int AColor);
/// <summary>
///   Clears the keyboard states.
/// </summary>
void ClearKeyStates();
/// <summary>
///   Checks if a key is currently held down.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key is held down, otherwise False.
/// </returns>
bool IsKeyPressed(unsigned char AKey);
/// <summary>
///   Checks if a key was recently released.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was released, otherwise False.
/// </returns>
bool WasKeyReleased(unsigned char AKey);
/// <summary>
///   Checks if a key was recently pressed.
/// </summary>
/// <param name="AKey">
///   The key to check.
/// </param>
/// <returns>
///   True if the key was pressed, otherwise False.
/// </returns>
bool WasKeyPressed(unsigned char AKey);
/// <summary>
///   Pauses execution until any key is pressed.
/// </summary>
/// <param name="AForcePause">
///   If True, forces a pause.
/// </param>
/// <param name="AColor">
///   The color to use during the pause.
/// </param>
/// <param name="AText">
///   The text to display during the pause.
/// </param>
void Pause(bool AForcePause=true, int AColor=FG_WHITE,
  const wchar_t* AText=NULL);
/// <summary>
///   Processes Windows messages.
/// </summary>
void ProcessMessages();
/// <summary>
///   Masks out the first word found in a text string.
/// </summary>
/// <param name="AText">
///   The text to search.
/// </param>
/// <param name="AWord">
///   The word to mask.
/// </param>
/// <returns>
///   The modified text with the first found word masked.
/// </returns>
wchar_t* MaskFirstFoundWord(const wchar_t* AText, const wchar_t* AWord);
/// <summary>
///   Sets the token response right margin.
/// </summary>
/// <param name="AMargin">
///   The right margin value.
/// </param>
void SetTokenResponseRightMargin(int AMargin);
/// <summary>
///   Adds a new token to token response.
/// </summary>
/// <param name="AToken">
///   The token to add.
/// </param>
/// <returns>
///   An integer representing the token response.
/// </returns>
int AddTokenResponseToken(const wchar_t* AToken);
/// <summary>
///   Gets the last word from token response.
/// </summary>
/// <param name="ATrimLeft">
///   If True, trims the left side.
/// </param>
/// <returns>
///   The last word from the token response.
/// </returns>
wchar_t* LastTokenResponseWord(bool ATrimLeft);
/// <summary>
///   Checks if all words have been processed in token response.
/// </summary>
/// <returns>
///   True if all words have been processed, otherwise False.
/// </returns>
bool FinalizeTokenResponse();
/// <summary>
///   Sets the speech word callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetSpeechWordCallback(SpeechWordCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the speech word callback.
/// </summary>
/// <returns>
///   The current speech word callback.
/// </returns>
SpeechWordCallback GetSpeechWordCallback();
/// <summary>
///   Gets the speech voice count.
/// </summary>
/// <returns>
///   The number of available speech voices.
/// </returns>
int GetSpeechVoiceCount();
/// <summary>
///   Gets a speech voice attribute.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
/// <param name="AAttribute">
///   The attribute to retrieve.
/// </param>
/// <returns>
///   The attribute value as a string.
/// </returns>
wchar_t* GetSpeechVoiceAttribute(int AIndex, unsigned char AAttribute);
/// <summary>
///   Changes the speech voice speed.
/// </summary>
/// <param name="AIndex">
///   The index of the speech voice.
/// </param>
void ChangeSpeechVoice(int AIndex);
/// <summary>
///   Gets the current speech voice.
/// </summary>
/// <returns>
///   The index of the current speech voice.
/// </returns>
int GetSpeechVoice();
/// <summary>
///   Sets the current speech voice volume.
/// </summary>
/// <param name="AVolume">
///   The volume level to set.
/// </param>
void SetSpeechVolume(float AVolume);
/// <summary>
///   Gets the current speech voice volume.
/// </summary>
/// <returns>
///   The current volume level.
/// </returns>
float GetSpeechVolume();